new website update

--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -124,7 +124,7 @@
 <div class="content">
   <div class="container">
     <div class="row">
-      <div class="col-md-3 col-sm-5">
+      <div class="col-md-3">
         <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
         <div class="text-center">
           <h5><a href="allfriend.html">123 Coworkers in Your Network</a></h5>
@@ -133,7 +133,7 @@
       </div>
       
       <!--inbox-->
-      <div class="col-md-6 col-sm-7 center-column-padding">
+      <div class="col-md-6 center-column-padding">
         <h4 class="title-heading text-center">Activity Stream</h4>
         <div class="share-widget clearfix"> 
           <!-- Post an Idea -->
@@ -145,10 +145,12 @@
             <div id="possible_answer"> 1. Possible answer </div>
             <div class="add-possible-answer"> <i class="fa fa-plus padding remove_icon"></i>Add possible answer </div>
             <div class="add-possible-answer"> <i class="fa fa-plus padding remove_icon"></i>Add open-ended answer </div>
-            <div class="row">
-              <div class="col-md-4 text-center"><i class="fa fa-question padding feedback360_icon icon-color"></i>Ask another question </div>
+            <div class=" add-possible-answer">
+            <div class="row padding-bottom">
+              <div class="col-md-4 text-center"><i class="fa fa-question padding feedback360_icon icon-color"></i>Ask new question </div>
               <div class="col-md-4 text-center"> <i class="fa fa-paperclip padding feedback360_icon icon-color"></i>Attach file</div>
               <div class="col-md-4 text-center"> <i class="fa fa-video-camera padding feedback360_icon icon-color"></i>Attach video</div>
+            </div>
             </div>
             <div  id="feedback360"  > </div>
             <div id="announcement" >
