--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -178,7 +178,7 @@
                   <div class="form-group">
                     <label form="message">Message</label>
                     <textarea class="form-control share-widget-textarea" rows="6" placeholder="Compose a mistake-proof message™. Click on 'Snap Message' button to send it as a snap message. Snap messages will delete 30 seconds after the recipients open them." tabindex="1"></textarea>
-                    <div class="row send-message-padding padding-top "> <a> <i class="fa fa-paperclip text-center"></i> &nbsp; Add Files</a></div>
+                    <div class="row send-message-padding padding-top "> <a> <i class="fa fa-paperclip text-center icon-color "></i> &nbsp; Add Files</a></div>
                   </div>
                 </div>
                 <div class=" row send-message-padding ">
@@ -188,18 +188,18 @@
                         <input type="radio" value="" >
                         <a class="ui-tooltip" data-toggle="tooltip"data-original-title="Snap messages will delete 30 seconds after the recipients open them" >Snap Message </a> </label>
                     </li>
-                    <li class="inline-block">
+                      &nbsp;&nbsp;&nbsp;&nbsp; <li class="inline-block">
                       <label>
                         <input type="radio" value="">
-                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-Proof Message™</a> </label>
+                     <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-Proof Message™</a> </label>
                     </li>
                   </div>
                   
                 </div>
                 <div class=" pull-right inline-block">
-                    <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     &nbsp;
-                    <button type="submit" class="btn btn-primary btn-default">Send</button>
+                    <button type="submit" class="btn btn-primary">Send</button>
                   </div>
               </fieldset>
             </form>
