change on compose message page

--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -140,7 +140,7 @@
       </div>
       <!--inbox-->
       <div class="col-md-6 layout-main">
-        <div class="pull-right btn-cm"> Compose Message </div>
+        <div class="pull-right"> <a class="btn-cm" href="ComposeMessage.html">Compose Message</a> </div>
         <div>
           <Div class="message-tab">
             <ul id="myTab2" class="nav nav-pills">
