--- a/public/templates/settings-admin.html
+++ b/public/templates/settings-admin.html
@@ -243,6 +243,18 @@
                 <input type="checkbox" value="">
                 moves to a new department</label>
             </div>
+            <div class="checkbox padding">
+              <label>
+              
+                <input type="checkbox" value="">
+                upload a file</label>
+            </div>
+            <div class="checkbox padding">
+              <label>
+              
+                <input type="checkbox" value="">
+                download a file</label>
+            </div>
           </div>
           <div class="padding"><b>show notifications
 </b></div>
