--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -877,7 +877,7 @@ opacity:1;
 }
 .modal-styled .modal-header {
 	color: #fff;
-	background-color: #2f4354;
+	background-color: #4b473a;
 	background-image: -webkit-linear-gradient(top, #2f4354 0%, #243441 100%);
 	background-image: linear-gradient(to bottom, #2f4354 0%, #243441 100%);
 	background-repeat: repeat-x;
@@ -886,7 +886,7 @@ opacity:1;
 	border-top-left-radius: 5px;
 }
 .modal-styled .modal-header .close {
-	color: #7f9db7;
+	color: #fff;
 	opacity: 1;
 	filter: alpha(opacity=100);
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
@@ -950,10 +950,10 @@ opacity:1;
 	margin-right: .35em;
 	color: #d74b4b;
 	font-size: 1.25em;
-	content: "\f0d7";
+	content: "open";
 }
 .is-open .accordion-caret:before {
-	content: "\f0da";
+	content: "Close";
 }
 /* !Portlets */
 /* ----------------------------------------------- */
@@ -1122,7 +1122,7 @@ opacity:1;
 	padding-bottom: 8px;
 	padding-left: 2.5em;
 	margin-bottom: 0;
-	font-size: 13px;
+	
 	border-bottom: 1px solid #ddd;
 }
 .notifications-list > li > .icon-li {
@@ -2547,14 +2547,14 @@ form .required:after {
 	left: auto;
 	float: none;
 }
-.demo-section {
-	margin-bottom: 5em;
+.popup-section {
+	margin-bottom: 1em;
 }
-.demo-section:before, .demo-section:after {
+.popup-section:before, .popup-section:after {
 	content: " ";
 	display: table;
 }
-.demo-section:after {
+.popup-section:after {
 	clear: both;
 }
 .portlet-title, .content-title {
@@ -2812,8 +2812,8 @@ a:hover, a:focus {
 .progress-bar-padding {
 	padding-left: 15p;
 	padding-right: 25px;
-	min-width: 300px;
-	width: 100%
+	min-width: 200px;
+	width: 100%;
 }
 .progress {
 	margin-bottom: 0px;
@@ -2845,7 +2845,7 @@ a:hover, a:focus {
 .suggested-coworker-box {
 	padding: 10px;
 	margin: 4px;
-	background-color: #f5f5f5;
+
 	border: 1px solid #e3e3e3;
 	border-radius: 4px;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
@@ -3041,3 +3041,12 @@ opacity:70%;
 .answer-textbox{ max-width:560px; margin:auto;}
 .activity-image-big { max-width:500px; border: 1px solid #ddd; border-radius:5px; text-align:center;}
 .activity-image-thumb { max-width:150px; padding:2px; display:inline-table; border: 1px solid #ddd; border-radius:5px;}
+.coworker-preview-close{ border-top: 1px solid #e3e3e3;
+	display:block;text-align: right; padding-top:5px; padding-bottom:5px;}
+	.modal-body {
+    padding: 0px;}
+	.modal-footer {
+    margin-top: 15px;
+    padding: 0px 0px 0px;
+    text-align: right;
+}
